[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Itay Bookstein <ibookstein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
regex = "1.3.5"
lazy_static = "1.4.0"
itertools = "0.9.0"
num-integer = "0.1.42"
num-rational = "0.2.3"
num-derive = "0.3.0"
num-traits = "0.2.11"
